Update delete button color

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body:after {
 body > * {
   position: relative;
   z-index: 1;
-  color: white;
+  color: #ffffff;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -83,11 +83,11 @@ header {
 }
 
 button {
-  background: white;
   border: 0;
   border-radius: 0;
   padding: 10px 20px;
   margin-top: 20px;
+  background: #ffffff;
   font-size: 15px;
 }
 
@@ -99,6 +99,8 @@ button {
   padding: 5px 10px;
   margin: 10px 0;
   font-size: 10px;
+  background-color: #d9534f;
+  color: #ffffff;
 }
 
 .annual-salary:before {
